# Synthetiseur

./: .gitignore  README.md
projet/: AudioGenerator.cpp  AudioGenerator.h  CMakeLists.txt  Delay.cpp  Delay.h  Enveloppe.cpp  Enveloppe.h  Filtre.cpp  Filtre.h  MainWindow.cpp  MainWindow.h  Oscillateurs.cpp  Oscillateurs.h  main.cpp
projet/Audio/: AudioGenerator.cpp  AudioGenerator.h  Delay.cpp  Delay.h  Enveloppe.cpp  Enveloppe.h  Filtre.cpp  Filtre.h  Oscillateurs.cpp  Oscillateurs.h
